@@ -1,3 +1,5 @@
+* Dialer: fix broken Do Not Call check for outgoing calls by checking whether
+  phone number appears in DNC at time of call. Fixes Elastix bug #1178.
 * Campaign Out: do not allow creation of campaigns with 0 retries.
 * Agent Console: expose selection of attended call transfer via "atxfercall"
   command.
